--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pg": "^8.16.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@types/node": "20.0.0",
