--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^7.0.2",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "20.0.0",
