--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@refinedev/supabase": "^5.7.4",
     "@supabase/supabase-js": "2.7.0",
     "@uiw/react-md-editor": "^3.19.5",
+    "@xyflow/react": "^12.8.1",
     "antd": "^5.17.0",
     "axios": "^1.8.4",
     "pg": "^8.16.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^7.0.2",
-    "reactflow": "^11.11.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
