feat: add deployment scripts for Orthanc and Nginx with auto-restart functionality

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -22,7 +22,7 @@ http {
     }
 
     location /datasource/ {
-      proxy_pass https://latn-3.eastasia.cloudapp.azure.com/datasource/;
+      proxy_pass http://localhost:8042/datasource/;
       proxy_http_version 1.1;
       proxy_buffering off;
       proxy_read_timeout 300s;
