--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -15,14 +15,13 @@ http {
     error_page   500 502 503 504  /50x.html;
 
     location /ohif3/ {
-      # rewrite ^/ohif3(/.*)$ $1 break;
-      proxy_pass http://localhost:3001/ohif3/;
+      proxy_pass https://latn-3-ohif3.pages.dev/;
       proxy_buffering off;
       proxy_cache off;
     }
 
     location /datasource/ {
-      proxy_pass http://localhost:8042/datasource/;
+      proxy_pass http://localhost:8042/;
       proxy_http_version 1.1;
       proxy_buffering off;
       proxy_read_timeout 300s;
@@ -34,12 +33,10 @@ http {
       expires 0;
       add_header Cache-Control private;
       add_header 'Access-Control-Allow-Origin' '*' always;
-
-      # rewrite ^/datasource(/.*)$ $1 break; # Keep or adjust based on local Orthanc URL structure
     }
     location / {
       proxy_cache off;
-      proxy_pass http://localhost:3000/;
+      proxy_pass https://latn-5.pages.dev/;
       proxy_buffering off;
     }
   }
