feat: add Dockerfile for Nginx and update deployment script for custom image

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -6,6 +6,7 @@ events {
 
 
 http {
+  resolver 8.8.8.8 ipv6=off; # Force IPv4 DNS resolution
   include '/etc/nginx/mime.types';
   default_type  application/octet-stream;
   keepalive_timeout  65;
@@ -18,6 +19,7 @@ http {
       proxy_pass https://latn-3-ohif3.pages.dev/;
       proxy_buffering off;
       proxy_cache off;
+      proxy_ssl_server_name on;
     }
 
     location /datasource/ {
@@ -38,6 +40,7 @@ http {
       proxy_cache off;
       proxy_pass https://latn-5.pages.dev/;
       proxy_buffering off;
+      proxy_ssl_server_name on;
     }
   }
 }
