fix: enhance CORS configuration in nginx settings

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -10,6 +10,24 @@ http {
   include '/etc/nginx/mime.types';
   default_type  application/octet-stream;
   keepalive_timeout  65;
+
+  # Global CORS headers
+  add_header 'Access-Control-Allow-Origin' '*' always;
+  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+  add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,X-Requested-With' always;
+  add_header 'Access-Control-Max-Age' 1728000 always;
+
+  # Global preflight handler
+  if ($request_method = 'OPTIONS') {
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,X-Requested-With' always;
+    add_header 'Access-Control-Max-Age' 1728000 always;
+    add_header 'Content-Length' 0;
+    add_header 'Content-Type' 'text/plain charset=UTF-8';
+    return 204;
+  }
+
   server {
     listen       80;
     server_name  localhost;
@@ -34,7 +52,6 @@ http {
 
       expires 0;
       add_header Cache-Control private;
-      add_header 'Access-Control-Allow-Origin' '*' always;
     }
     location / {
       proxy_cache off;
