fix: reorganize CORS preflight handler in nginx configuration

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -17,21 +17,21 @@ http {
   add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,X-Requested-With' always;
   add_header 'Access-Control-Max-Age' 1728000 always;
 
-  # Global preflight handler
-  if ($request_method = 'OPTIONS') {
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-    add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,X-Requested-With' always;
-    add_header 'Access-Control-Max-Age' 1728000 always;
-    add_header 'Content-Length' 0;
-    add_header 'Content-Type' 'text/plain charset=UTF-8';
-    return 204;
-  }
-
   server {
     listen       80;
     server_name  localhost;
     error_page   500 502 503 504  /50x.html;
+
+    # Preflight handler for CORS
+    if ($request_method = 'OPTIONS') {
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+      add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,X-Requested-With' always;
+      add_header 'Access-Control-Max-Age' 1728000 always;
+      add_header 'Content-Length' 0;
+      add_header 'Content-Type' 'text/plain charset=UTF-8';
+      return 204;
+    }
 
     location /ohif3/ {
       proxy_pass https://latn-3-ohif3.pages.dev/;
