--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -13,8 +13,20 @@ http {
 
 
   server {
-    listen       80;
-    server_name  localhost;
+    listen 80;
+    server_name mediflow-latn.duckdns.org;
+    return 301 https://$host$request_uri;
+  }
+
+  server {
+    listen 443 ssl;
+    server_name mediflow-latn.duckdns.org;
+
+    ssl_certificate /etc/letsencrypt/live/mediflow-latn.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mediflow-latn.duckdns.org/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     error_page   500 502 503 504  /50x.html;
 
     location /ohif3/ {
