--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -37,7 +37,7 @@ http {
     }
 
     location /datasource/ {
-      proxy_pass http://localhost:8042/;
+      proxy_pass http://orthanc:8042/;
       proxy_http_version 1.1;
       proxy_buffering off;
       proxy_read_timeout 300s;
