--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -29,6 +29,12 @@ http {
 
     error_page   500 502 503 504  /50x.html;
 
+    location /monai/ {
+      proxy_cache off;
+      proxy_pass http://120.238.149.138:57180/;
+      proxy_buffering off;
+    }
+
     location /ohif3/ {
       proxy_pass https://latn-3-ohif3.pages.dev/;
       proxy_buffering off;
