--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -55,6 +55,7 @@ http {
       expires 0;
       add_header Cache-Control private;
 
+      add_header 'Access-Control-Allow-Origin' '*' always;
       if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
