--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^7.0.2",
+    "recharts": "^3.1.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
