fix: update server name and certificate references from duckdns to freemyip in nginx configuration

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -14,16 +14,16 @@ http {
 
   server {
     listen 80;
-    server_name mediflow-latn.duckdns.org;
+    server_name mediflow.freemyip.com;
     return 301 https://$host$request_uri;
   }
 
   server {
     listen 443 ssl;
-    server_name mediflow-latn.duckdns.org;
+    server_name mediflow.freemyip.com;
 
-    ssl_certificate /etc/letsencrypt/live/mediflow-latn.duckdns.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mediflow-latn.duckdns.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/mediflow.freemyip.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mediflow.freemyip.com/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
