--- a/configs/nginx.local.conf
+++ b/configs/nginx.local.conf
@@ -22,7 +22,7 @@ http {
     }
 
     location /datasource/ {
-      proxy_pass https://mediflow-latn.duckdns.org/datasource/;
+      proxy_pass https://mediflow.freemyip.com/datasource/;
       proxy_http_version 1.1;
       proxy_buffering off;
       proxy_read_timeout 300s;
