--- a/configs/Caddyfile
+++ b/configs/Caddyfile
@@ -1,49 +1,70 @@
 mediflow.freemyip.com {
+  # Enable gzip compression
   encode gzip
 
-  # HTTP to HTTPS redirect
-  @http {
-    protocol http
-  }
-  redir @http https://{host}{uri}
-
-  # Datasource/Orthanc proxy (match both /datasource and /datasource/*)
-  @datasource path /datasource /datasource/*
-  reverse_proxy @datasource http://orthanc:8042 {
-    header_up X-Real-IP {remote_host}
-    header_up X-Forwarded-For {remote_host}
-    header_up X-Forwarded-Proto {scheme}
-    header_up Connection {>Connection}
-    header_up Upgrade {>Upgrade}
+  # OHIF3 proxy
+  handle_path /ohif3/* {
+    reverse_proxy https://latn-3-ohif3.pages.dev {
+      # No buffering
+      flush_interval -1
+      # No caching
+      header_up Cache-Control no-cache
+      # SSL server name indication
+      header_up Host latn-3-ohif3.pages.dev
+    }
   }
 
-  # OHIF viewer proxy (match both /ohif3 and /ohif3/*)
-  @ohif path /ohif3 /ohif3/*
-  reverse_proxy @ohif https://latn-3-ohif3.pages.dev {
-    header_up X-Real-IP {remote_host}
-    header_up X-Forwarded-For {remote_host}
-    header_up X-Forwarded-Proto {scheme}
+  # Datasource/Orthanc proxy
+  handle_path /datasource/* {
+    reverse_proxy http://orthanc:8042 {
+      # HTTP/1.1 is default in Caddy
+      # No buffering
+      flush_interval -1
+      # Read timeout
+      timeout 300s
+      # Headers
+      header_up Host {host}
+      header_up X-Real-IP {remote_host}
+      header_up X-Forwarded-For {remote_host}
+      header_up X-Forwarded-Proto {scheme}
+    }
+
+    # Response headers
+    header {
+      Cache-Control private
+      Expires 0
+      Access-Control-Allow-Origin *
+      defer
+    }
+
+    # Handle OPTIONS preflight requests
+    @options method OPTIONS
+    handle @options {
+      header {
+        Access-Control-Allow-Origin *
+        Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE"
+        Access-Control-Allow-Headers "Authorization, Content-Type, Accept, Origin, X-Requested-With"
+        Access-Control-Max-Age 1728000
+        Content-Length 0
+        Content-Type "text/plain; charset=UTF-8"
+      }
+      respond 204
+    }
   }
 
-  # Default proxy
-  reverse_proxy https://latn-5.pages.dev {
-    header_up X-Real-IP {remote_host}
-    header_up X-Forwarded-For {remote_host}
-    header_up X-Forwarded-Proto {scheme}
+  # Default location (root)
+  handle {
+    reverse_proxy https://latn-5.pages.dev {
+      # No caching
+      header_up Cache-Control no-cache
+      # No buffering
+      flush_interval -1
+      # SSL server name indication
+      header_up Host latn-5.pages.dev
+    }
   }
 
-  # Global headers
-  header {
-    Access-Control-Allow-Origin *
-    Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE"
-    Access-Control-Allow-Headers "Authorization, Content-Type, Accept, Origin, X-Requested-With"
-    Access-Control-Max-Age 1728000
-
-    X-Content-Type-Options nosniff
-    X-Frame-Options DENY
-    X-XSS-Protection "1; mode=block"
-
-    Cache-Control "private, no-cache"
-    Expires 0
-  }
+  # Global settings
+  # TLS protocols (Caddy uses TLS 1.2 and 1.3 by default)
+  # High security ciphers are default in Caddy
 }
